--- a/app/views/lunch/go.html.erb
+++ b/app/views/lunch/go.html.erb
@@ -1,2 +1,4 @@
 <h1><%=@recommend.name%>でも食べますか</h1>
-<h2><%=@recommend.holiday%></h2>
+<h2>定休日　<%=@recommend.holiday%></h2>
+<h2>営業時間　<%=@recommend.time%></h2>
+<h4>tel:<%=@recommend.tel%>  住所<%=@recommend.address%></h4>
