--- a/app/views/lunch/go.html.erb
+++ b/app/views/lunch/go.html.erb
@@ -1,4 +1,7 @@
 <h1><%=@recommend.name%>でも食べますか</h1>
-<h2>定休日　<%=@recommend.holiday%></h2>
-<h2>営業時間　<%=@recommend.time%></h2>
-<h4>tel:<%=@recommend.tel%>      住所:<%=@recommend.address%></h4>
+<ul>
+  <li>定休日　<%=@recommend.holiday%></li>
+  <li>営業時間　<%=@recommend.time%></li>
+  <li>tel:<%=@recommend.tel%></li>
+  <li>住所:<%=@recommend.address%></li>
+</ul>
