--- a/app/views/eateries/new.html.erb
+++ b/app/views/eateries/new.html.erb
@@ -4,5 +4,9 @@ local: true do |f| %>
    <%= f.label :name %>
    <%= f.text_field :name, id: 'eatery_name' %>
 </div>
-  <%= f.submit %>
+<%= f.submit %>
+<% flash.each do |message_type, message| %>
+     <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
+<%= yield %>
 <% end %>
