--- a/app/views/lunch/go.html.erb
+++ b/app/views/lunch/go.html.erb
@@ -5,3 +5,6 @@
   <li>tel:<%=@recommend.tel%></li>
   <li>住所:<%=@recommend.address%></li>
 </ul>
+<% flash.each do |message_type, message| %>
+     <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
