--- a/app/views/poems/result.html.erb
+++ b/app/views/poems/result.html.erb
@@ -1,7 +1,8 @@
 <div class="center jumbotron">
   <h1>結果発表</h1>
+  <h3>点数は<%=@poem %>てん！</h3>
 </div>
 <h2>今日のラッキーアイテム</h2>
-<h3>菅官房長官</h3>
+<h2>菅官房長官</h2>
 
 <%= link_to "HOMEに戻る", root_path, class: "btn btn-lg btn-primary" %>
