--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,42 @@
 <div class="center jumbotron">
-  <h1>全国対戦！怒りポエム！！</h1>
+  <h2>全国対戦！怒りポエム！！</h2>
+  <% if logged_in? %>
+  <div class="row">
+    <div class="col-md-8">
+      <h3>最近の怒り</h3>
+      <%= render 'shared/feed' %>
+    </div>
+    <%= link_to "怒りをぶつける", post_path, class: "btn btn-lg btn-primary" %>
 
-  <h2>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
 </div>
-<%= link_to "怒りをぶつける", poem_path, class: "btn btn-lg btn-primary" %>
 
-<%# <%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %> %>
+  <div class="col-md-8">
+    <h3>全国ランキング</h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>ユーザ名</th>
+          <th>点数</th>
+          <th>ポエム</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @feed_items.each do |f| %>
+          <tr>
+            <td><%= link_to gravatar_for(current_user, size: 20), current_user %> <%= f.user.name %></td>
+            <td><%= f.keisan %></td>
+            <td><%= f.content %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= will_paginate @feed_items, :previous_label => ' &lt 前へ', :next_label => '次へ &gt' %>
+  </div>
+  <% else %>
+
+  <%= link_to "怒りをぶつける", poem_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to "新規登録", signup_path, class: "btn btn-lg btn-primary" %>
+<% end %>
