--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, 'Contact') %>
 
-<h1>where2eat</h1>
+<h1>怒りポエム</h1>
+<h4>どうも楽しくやらせてもらってます、ぴろしき太です。</h4>
+<h4>最近、100円玉落ちてると思って拾ってみたらガムでした</h4>
