--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,12 @@
 <% provide(:title, 'help') %>
-
-<h1>where2eat</h1>
+<div class="center jumbotron">
+  <div class="row">
+    <div class="col-md-8">
+      <h2>怒りポエム　使いかた</h2>
+        <ul>1.まずは新規登録</ul>
+        <ul>2.怒りをぶつけよう!</ul>
+        <ul>3.フォローした友達の怒りも見れる！</ul>
+        <ul>4.友達の怒りと盛り上がっちゃおう!</ul>
+    </div>
+  </div>
+</div>
