--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,11 @@
 <footer class="footer">
   <small>
-   The <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-   by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+   <a href="https://twins.tsukuba.ac.jp">ikaikaikaripoem</a>
   </small>
   <nav>
    <ul>
-    <!-- <li><%= link_to "About",   '#' %></li> -->
     <li><%= link_to "Contact", contact_path %></li>
-    <li><a href="http://news.railstutorial.org/">News</a></li>
+    <li><a href="https://www.ecloud.tsukuba.ac.jp/manaba">News</a></li>
    </ul>
   </nav>
 </footer>
